university/cat/cat-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cat-manual
spec:
  containers:
  - image: spotmax/cat
    name: cat
    ports:
    - containerPort: 5000
      protocol: TCP
