university/cat/cat-ssd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cat-ssd
spec:
  nodeSelector:
    ssd: "true"
  containers:
  - image: spotmax/cat
    name: cat
    ports:
    - containerPort: 5000
      protocol: TCP
