university/cat/cat-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http
  selector:
    app: cat
