university/cat/cat-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    nodePort: 30123
  selector:
    app: cat
