university/cat/cat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: cat
