university/cat/cat-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cat
spec:
  tls:
  - hosts:
    - cat.example.com
    secretName: tls-secret
  rules:
  - host: cat.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cat-nodeport
          servicePort: 80
