university/cat/cat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cat
spec:
  rules:
  - host: cat.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cat-nodeport
          servicePort: 80
